--- a/web/WEB-INF/Nest/pages/index.html
+++ b/web/WEB-INF/Nest/pages/index.html
@@ -6,8 +6,8 @@
     <title>LayIM测试</title>
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <link rel="stylesheet" href="../layui/css/layui.css" media="all">
-    <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js">
-    </script>
+    <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+    <script src="../reconnecting-websocket/reconnecting-websocket.min.js"></script>
 </head>
 
 <body class="layui-bg-black">
