--- a/web/WEB-INF/Nest/pages/webSocketTest.html
+++ b/web/WEB-INF/Nest/pages/webSocketTest.html
@@ -14,7 +14,7 @@
     <script src="../layui/layui.js"></script>
     <script>
         var socket;
-        var id=2;
+        var id="1";
 
         layui.use('layim', function (layim) {
             //基础配置
@@ -25,7 +25,7 @@
                     url: 'http://localhost:8080/user/get-info' //接口地址（返回的数据格式见下文）
                     , type: 'get' //默认get，一般可不填
                     , data: {
-                        "id": id
+                        id: id//-------------------
                     } //额外参数
                 }
                 , initSkin: '6.jpg'//设置初始皮肤
@@ -73,7 +73,7 @@
                 var data = {
                     username: mine.username
                     , avatar: mine.avatar
-                    , id: to.id
+                    , id: mine.id
                     , type: to.type
                     , content: mine.content
                     , cid: to.id
@@ -86,25 +86,25 @@
                     , data: data
                 }
                 socket.send(JSON.stringify(msg));
-                alert(JSON.stringify(data));
             });
 
             //init方法调用结束时事件触发
             layim.on('ready', function (options) {
                 // console.log(options);
 
-                socket = new ReconnectingWebSocket("ws://localhost:8081/chat", null, { reconnectInterval: 3000 });//掉线重连机制
+                socket = new ReconnectingWebSocket("ws://localhost:8081/chat", null, { reconnectInterval: 2000,maxReconnectAttempts:1});//掉线重连机制
                 socket.onerror = function () {
                     layer.msg('连接失败，重试中', { icon: 2, offset: 't', anim: 5 });
                 };
 
                 socket.onopen = function () {
                     layer.msg('连接成功', { icon: 1, offset: 't', anim: 1 });
-                    socket.send(id+"");
+                    socket.send(id);
                 };
 
                 socket.onmessage = function (evt) {
                     layim.getMessage(JSON.parse(evt.data).data);
+                    alert(evt.data);
                     // alert(JSON.stringify(evt)+"-----");
                     // if (evt.type === 'chat') {
                     //     // alert(evt.data);
@@ -116,7 +116,6 @@
                 }
 
                 socket.onclose = function () {
-                    socket.close();
                     layer.msg('主机关闭了链接或者账号已已在其他地方登录', { icon: 5, offset: 't', anim: 6 });
                 };
 
@@ -146,8 +145,8 @@
             //监听签名修改
             layim.on('sign', function (value) {
                 $.post('http://localhost:8080/user/change-sign', {
-                    id: 1
-                    , sign: value
+                    id: id
+                    ,sign: value
                 });
             });
 
