--- a/web/WEB-INF/Nest/pages/webSocketTest.html
+++ b/web/WEB-INF/Nest/pages/webSocketTest.html
@@ -14,7 +14,7 @@
     <script src="../layui/layui.js"></script>
     <script>
         var socket;
-        var id="1";
+        var id = "1";
 
         layui.use('layim', function (layim) {
             //基础配置
@@ -25,7 +25,7 @@
                     url: 'http://localhost:8080/user/get-info' //接口地址（返回的数据格式见下文）
                     , type: 'get' //默认get，一般可不填
                     , data: {
-                        id: id//-------------------
+                        id: id
                     } //额外参数
                 }
                 , initSkin: '6.jpg'//设置初始皮肤
@@ -73,18 +73,18 @@
                 var data = {
                     username: mine.username
                     , avatar: mine.avatar
-                    , id: mine.id
+                    , id: to.id
                     , type: to.type
                     , content: mine.content
                     , cid: to.id
                     , mine: mine.mine
-                    , fromid: to.id
+                    , fromid: mine.id
                 };
 
                 var msg = {
                     emit: "chat"
                     , data: data
-                }
+                };
                 socket.send(JSON.stringify(msg));
             });
 
@@ -92,40 +92,41 @@
             layim.on('ready', function (options) {
                 // console.log(options);
 
-                socket = new ReconnectingWebSocket("ws://localhost:8081/chat", null, { reconnectInterval: 2000,maxReconnectAttempts:1});//掉线重连机制
+                socket = new ReconnectingWebSocket("ws://localhost:8081/chat", null, { reconnectInterval: 2000, maxReconnectAttempts: 0 });//掉线重连机制
                 socket.onerror = function () {
-                    layer.msg('连接失败，重试中', { icon: 2, offset: 't', anim: 5 });
+                    layer.msg('连接失败，重试中', { icon: 2,  anim: 5,offset: 't' });
+                    layer.load(2);
                 };
 
                 socket.onopen = function () {
-                    layer.msg('连接成功', { icon: 1, offset: 't', anim: 1 });
+                    layer.msg('连接成功', { icon: 1, anim: 1 });
                     socket.send(id);
                 };
 
                 socket.onmessage = function (evt) {
-                    layim.getMessage(JSON.parse(evt.data).data);
+                    var message = JSON.parse(evt.data);
                     alert(evt.data);
-                    // alert(JSON.stringify(evt)+"-----");
-                    // if (evt.type === 'chat') {
-                    //     // alert(evt.data);
-                    //     layim.getMessage(JSON.parse(evt.data));
-                    // } else if (evt.type === 'system') {
-                    //     // alert(evt.data);
-                    //     layim.getMessage(JSON.parse(evt.data));
-                    // }
+                    if (message.emit === 'chat') {//是聊天消息
+                        layim.getMessage(message.data);
+                    } else if (message.emit === 'addList') {//是通知消息
+                        layim.addList(message.data);
+                    }else if(res.emit==='changeStatus'){//是更改用户状态消息
+                        var id=message.data.id;
+                        var status=message.data.status;
+                        layim.setFriendStatus(id,status);
+                    }
                 }
 
                 socket.onclose = function () {
-                    layer.msg('主机关闭了链接或者账号已已在其他地方登录', { icon: 5, offset: 't', anim: 6 });
+                    layer.alert('主机关闭了链接或者账号已已在其他地方登录', { icon: 5, offset: 't', anim: 6 });
                 };
 
             });
 
             //监听在线状态
             layim.on('online', function (status) {
-
                 $.post('http://localhost:8080/user/change-status', {
-                    id: 1
+                    id: id
                     , status: status
                 });
 
@@ -140,13 +141,24 @@
                 //     dataType: "jsonp", //指定服务器返回的数据类型
                 // });
 
+                var data = {
+                    id: id
+                    ,status:status
+                };
+
+                var msg = {
+                    emit: "changeStatus"
+                    , data: data
+                };
+                socket.send(JSON.stringify(msg));
+
             });
 
             //监听签名修改
             layim.on('sign', function (value) {
                 $.post('http://localhost:8080/user/change-sign', {
                     id: id
-                    ,sign: value
+                    , sign: value
                 });
             });
 
