--- a/web/WEB-INF/Nest/pages/signUp.html
+++ b/web/WEB-INF/Nest/pages/signUp.html
@@ -15,7 +15,7 @@
     <style>
         .layoutAll {
             background: url('images/signinBackgroundImage3.jpg') no-repeat 0px 0px;
-            background-size: 1366px 728px;
+            background-size: cover;
         }
 
         .centerDiv {
