--- a/web/WEB-INF/Nest/pages/index.html
+++ b/web/WEB-INF/Nest/pages/index.html
@@ -96,12 +96,11 @@
 
             //init方法调用结束时事件触发
             layim.on('ready', function (options) {
-                // console.log(options);
+                socket = new ReconnectingWebSocket("ws://localhost:8081/chat", null, { reconnectInterval: 5000, maxReconnectAttempts: 1 });//掉线重连机制
 
-                socket = new ReconnectingWebSocket("ws://localhost:8081/chat", null, { reconnectInterval: 2000, maxReconnectAttempts: 1 });//掉线重连机制
                 socket.onerror = function () {
-                    layer.msg('连接失败', { icon: 2, anim: 5, time: 2000,offset:'t' }, function () {
-                        layer.load(1,{shade: [0.3, '#393D49']});
+                    layer.msg('主机关闭了链接或者账号已在其他地方登录', { icon: 2, anim: 5, time: 5000, offset: 't' }, function () {
+                        layer.load(1, { shade: [0.3, '#393D49'] });
                     });
                 };
 
@@ -117,14 +116,16 @@
                     var message = JSON.parse(evt.data);
                     if (message.emit === 'chat') {//是聊天消息
                         layim.getMessage(message.data);
-                    } else if (message.emit === 'notify') {//是通知消息,只需要显示提示消息的数目
+                    } else if (message.emit === 'notify') {
                         var msgNum = message.data;
                         if (msgNum > 0)
-                            layim.msgbox(message.data);//提示用户有提示类的消息
+                            layim.msgbox(message.data);//是通知消息,只需要显示提示消息的数目
                     } else if (message.emit === 'changeStatus') {//是更改用户状态消息
                         var id = message.data.id;
                         var status = message.data.status;
                         layim.setFriendStatus(id, status);
+                    } else if (res.emit === 'addList') {
+                        layim.addList(res.data); //如果是在iframe页，如LayIM设定的add面板，则为 parent.layui.layim.addList(data);
                     }
                 }
 
@@ -132,7 +133,7 @@
                     // layer.alert('主机关闭了链接或者账号已在其他地方登录', { icon: 5, anim: 1 }, function (index) {
                     //     location.href = "./signIn.html";
                     // });
-                    layer.msg('连接失败', { icon: 2, anim: 5, time: 2000,offset:'t' })
+                    // layer.msg('连接失败', { icon: 2, anim: 5, time: 10000,offset:'t' })
                     // socket.close();
                 };
 
