--- a/web/WEB-INF/Nest/pages/index.html
+++ b/web/WEB-INF/Nest/pages/index.html
@@ -6,7 +6,6 @@
     <title>LayIM测试</title>
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <link rel="stylesheet" href="../layui/css/layui.css" media="all">
-    <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
     <script src="../reconnecting-websocket/reconnecting-websocket.min.js"></script>
     <style>
         body {
@@ -41,6 +40,7 @@
                 ]
                 , brief: false//是否始终开启面板
                 , isAudio: true//是否开启语音
+                , isVideo: true
                 , right: "100px"//面板右偏移量
 
                 //获取群员接口（返回的数据格式见下文）
@@ -56,15 +56,13 @@
 
                 //上传图片接口（返回的数据格式见下文），若不开启图片上传，剔除该项即可
                 , uploadImage: {
-                    url: 'http://localhost/image' //接口地址
-                    , type: 'post' //默认post
+                    url: 'http://localhost:8080/message/upload-image' //接口地址
                 }
 
                 //上传文件接口（返回的数据格式见下文），若不开启文件上传，剔除该项即可
-                , uploadFile: {
-                    url: '' //接口地址
-                    , type: 'post' //默认post
-                }
+                // , uploadFile: {
+                //     url: 'http://localhost:8080/message/upload-file' //接口地址
+                // }
 
                 , msgbox: layui.cache.dir + '../pages/msgbox.html?id=' + id //消息盒子页面地址，若不开启，剔除该项即可
                 , find: layui.cache.dir + '../pages/find.html?id=' + id //发现页面地址，若不开启，剔除该项即可
@@ -96,15 +94,13 @@
 
             //init方法调用结束时事件触发
             layim.on('ready', function (options) {
-                socket = new ReconnectingWebSocket("ws://localhost:8081/chat", null, { reconnectInterval: 5000, maxReconnectAttempts: 1 });//掉线重连机制
+                socket = new ReconnectingWebSocket("ws://localhost:8081/chat", null, { reconnectInterval: 2000, maxReconnectAttempts: 1 });//掉线重连机制
 
                 socket.onerror = function () {
                     layer.msg('主机关闭了链接或者账号已在其他地方登录', { icon: 2, anim: 5, time: 5000, offset: 't' }, function () {
                         layer.load(1, { shade: [0.3, '#393D49'] });
                     });
                 };
-
-
 
                 socket.onopen = function () {
                     layer.closeAll('loading');
@@ -130,11 +126,6 @@
                 }
 
                 socket.onclose = function () {
-                    // layer.alert('主机关闭了链接或者账号已在其他地方登录', { icon: 5, anim: 1 }, function (index) {
-                    //     location.href = "./signIn.html";
-                    // });
-                    // layer.msg('连接失败', { icon: 2, anim: 5, time: 10000,offset:'t' })
-                    // socket.close();
                 };
 
             });
@@ -145,17 +136,6 @@
                     id: id
                     , status: status
                 });
-
-                //使用jsonp来进行跨域访问
-                // $.ajax({
-                //     url: "http://localhost:8080/user/change-status",
-                //     type: "POST",
-                //     data: {
-                //         id: 1
-                //         , status: sta
-                //     },
-                //     dataType: "jsonp", //指定服务器返回的数据类型
-                // });
 
                 var data = {
                     id: id
