--- a/web/WEB-INF/Nest/pages/index.html
+++ b/web/WEB-INF/Nest/pages/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>LayIM测试</title>
-    <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <link rel="stylesheet" href="../layui/css/layui.css" media="all">
+    <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
     <script src="../reconnecting-websocket/reconnecting-websocket.min.js"></script>
     <style>
         body {
@@ -97,7 +97,7 @@
                 socket = new ReconnectingWebSocket("ws://localhost:8081/chat", null, { reconnectInterval: 2000, maxReconnectAttempts: 1 });//掉线重连机制
 
                 socket.onerror = function () {
-                    layer.msg('主机关闭了链接或者账号已在其他地方登录', { icon: 2, anim: 5, time: 5000, offset: 't' }, function () {
+                    layer.msg('主机关闭了链接或者账号已在其他地方登录', { icon: 2, anim: 5, time: 3000, offset: 't' }, function () {
                         layer.load(1, { shade: [0.3, '#393D49'] });
                     });
                 };
@@ -132,14 +132,14 @@
 
             //监听在线状态------------------------------
             layim.on('online', function (status) {
-                $.post('http://localhost:8080/user/change-status', {
+                $.get('http://localhost:8080/user/change-status', {
                     id: id
                     , status: status
                 });
 
                 var data = {
                     id: id
-                    , status: status
+                    , status: status === 'hide' ? 'offline' : status
                 };
 
                 var msg = {
@@ -147,7 +147,6 @@
                     , data: data
                 };
                 socket.send(JSON.stringify(msg));
-
             });
 
             //监听签名修改
