优化用户在线状态显示 优化添加好友消息推送

--- a/web/WEB-INF/Nest/layui/css/modules/layim/html/msgbox.html
+++ b/web/WEB-INF/Nest/layui/css/modules/layim/html/msgbox.html
@@ -115,7 +115,7 @@ layui.use(['layim', 'flow'], function(){
 
   //打开页面即把消息标记为已读
   
-  $.post('/message/read', {
+  $.post('/messageDTO/read', {
     type: 1
   });
 
