--- a/web/WEB-INF/Nest/pages/msgbox.html
+++ b/web/WEB-INF/Nest/pages/msgbox.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>消息盒子</title>
   <link rel="stylesheet" href="../layui/css/layui.css" media="all">
-  <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+  <script src="../jquery-2.1.4/jquery.min.js"></script>
   <script src="../layui/layui.js"></script>
 
   <style>
