--- a/web/WEB-INF/Nest/pages/find.html
+++ b/web/WEB-INF/Nest/pages/find.html
@@ -7,7 +7,7 @@
   <title>发现</title>
 
   <link rel="stylesheet" href="../layui/css/layui.css" media="all">
-  <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script>
+  <script src="../jquery-2.1.4/jquery.min.js"></script>
   <script src="../layui/layui.js"></script>
   <style>
     /* div {
