--- a/web/WEB-INF/Nest/pages/signUp.html
+++ b/web/WEB-INF/Nest/pages/signUp.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../layui/css/layui.css">
     <script src="../layui/layui.js"></script>
-    <script src="http://libs.baidu.com/jquery/2.1.4/jquery.min.js">
+    <script src="../jquery-2.1.4/jquery.min.js"></script>
     </script>
 
     <!-- //大框的样式 -->
