--- a/web/WEB-INF/Nest/pages/index.html
+++ b/web/WEB-INF/Nest/pages/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>LayIM测试</title>
+    <title>Nest</title>
     <link rel="stylesheet" href="../layui/css/layui.css" media="all">
     <script src="../jquery-2.1.4/jquery.min.js"></script>
     <script src="../reconnecting-websocket/reconnecting-websocket.min.js"></script>
@@ -26,7 +26,7 @@
             //基础配置
             layim.config({
 
-                //获取主面板列表信息，下文会做进一步介绍
+                //获取主面板列表信息
                 init: {
                     url: 'http://localhost:8080/user/get-info' //接口地址（返回的数据格式见下文）
                     , type: 'get' //默认get，一般可不填
@@ -97,12 +97,6 @@
             layim.on('ready', function (options) {
                 socket = new ReconnectingWebSocket("ws://localhost:8081/chat", null, { reconnectInterval: 2000, maxReconnectAttempts: 20 });//掉线重连机制
 
-                socket.onerror = function () {
-                    layer.msg('主机关闭了链接或者账号已在其他地方登录', { icon: 2, anim: 5, time: 3000, offset: 't' }, function () {
-                        layer.load(1, { shade: [0.3, '#393D49'] });
-                    });
-                };
-
                 socket.onopen = function () {
                     layer.closeAll('loading');
                     layer.msg('连接成功', { icon: 1, anim: 1 });
@@ -125,6 +119,12 @@
                         layim.addList(res.data); //如果是在iframe页，如LayIM设定的add面板，则为 parent.layui.layim.addList(data);
                     }
                 }
+
+                socket.onerror = function () {
+                    layer.msg('服务器关闭了链接或者账号已在其他地方登录', { icon: 2, anim: 5, time: 3000, offset: 't' }, function () {
+                        layer.load(1, { shade: [0.3, '#393D49'] });
+                    });
+                };
 
                 socket.onclose = function () {
                 };
