优化图片和文件上传功能

--- a/web/WEB-INF/Nest/pages/signIn.html
+++ b/web/WEB-INF/Nest/pages/signIn.html
@@ -96,7 +96,7 @@
         </form>
         <div id="sign-up">
             <a href="./find-password.html">忘记密码</a><span style="color:black;">&nbsp;|&nbsp;</span><a
-                href="./signUp.html">没有账号？去注册</a>
+                href="./register.html">没有账号？去注册</a>
         </div>
     </div>
 </body>
@@ -159,7 +159,6 @@
             }
         });
     });
-
     });
 
 </script>
