--- a/web/WEB-INF/Nest/pages/index.html
+++ b/web/WEB-INF/Nest/pages/index.html
@@ -11,7 +11,7 @@
 
     <style>
         body {
-            background: url('images/signinBackgroundImage3.jpg') no-repeat 0px 0px;
+            background: url('images/signinBackgroundImage4.jpeg') no-repeat 0px -200px;
             background-size: cover;
         }
     </style>
@@ -55,15 +55,15 @@
                 //隐藏面板时显示的内容
                 title: "My Nest"
 
-                //上传图片接口（返回的数据格式见下文），若不开启图片上传，剔除该项即可
+                //上传图片接口，若不开启图片上传，剔除该项即可
                 , uploadImage: {
                     url: 'http://localhost:8080/message/upload-image'
                 }
 
-                //上传文件接口（返回的数据格式见下文），若不开启文件上传，剔除该项即可
-                // , uploadFile: {
-                //     url: 'http://localhost:8080/message/upload-file' //接口地址
-                // }
+                //上传文件接口，若不开启文件上传，剔除该项即可
+                , uploadFile: {
+                    url: 'http://localhost:8080/message/upload-file' //接口地址
+                }
 
                 , msgbox: layui.cache.dir + '../pages/msgbox.html?id=' + id //消息盒子页面地址，若不开启，剔除该项即可
                 , find: layui.cache.dir + '../pages/find.html?id=' + id //发现页面地址，若不开启，剔除该项即可
@@ -131,7 +131,7 @@
 
             });
 
-            //监听在线状态------------------------------
+            //监听在线状态
             layim.on('online', function (status) {
                 $.post('http://localhost:8080/user/change-status', {
                     id: id
